[package]
name = "discord-typer"
version = "0.1.0"
edition = "2021"
authors = ["HyperCodec"]
default-run = "dctype"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dctype"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.20"
reqwest = "0.11.20"
simple_logger = "4.2.0"
tokio = { version = "1.32.0", features = ["full"] }
